main y header listo

--- a/Estilos.css
+++ b/Estilos.css
@@ -26,6 +26,9 @@
 }
 
 .nav #nav_logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   background: black;
 }
 
@@ -37,7 +40,7 @@
 }
 
 .sub_nav {
-  margin-top: -16px;
+  margin-top: -17px;
   background: lightgrey;
 }
 
@@ -45,13 +48,10 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.sub_nav .nav_item {
   list-style: none;
 }
 
-.sub_nav .nav_link {
+.sub_nav .nav_list .nav_link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -82,6 +82,14 @@
   margin-top: 10px;
 }
 
+.main-article p {
+  width: 140px;
+}
+
+.main-article b {
+  text-decoration: underline;
+}
+
 .main-article .article-section {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -101,36 +109,28 @@
   font-size: 20px;
 }
 
-.main-article p {
-  width: 140px;
-}
-
 .main-article .article-section2 p:last-child {
   color: green;
-}
-
-.main-article b {
-  text-decoration: underline;
 }
 
 @media only screen and (max-width: 700px) {
   body {
     margin-top: 70px;
   }
-  #nav_logo {
+  body #nav_logo {
     position: absolute;
     top: 7px;
     left: 45%;
   }
-  .nav {
+  body .nav {
     background: black;
   }
-  .nav .nav_list .nav_items .nav_link {
+  body .nav .nav_list .nav_items .nav_link {
     color: white;
     margin-left: -3%;
   }
-  .main-article {
-    width: 70%;
+  body .main-article {
+    width: 65%;
   }
 }
 
