--- a/_Header.scss
+++ b/_Header.scss
@@ -19,6 +19,7 @@
         }
     }
     & #nav_logo {
+        display:flex;
         background:black;
      
         & .nav_logo-modified{
@@ -32,31 +33,30 @@
 }
 
 
-
-
-
-
 .sub_nav {
-  margin-top:-16px;
+  margin-top:-17px;
   background:lightgrey;
-}
-.sub_nav .nav_list {
- display: flex;
-}
-.sub_nav .nav_item {
- list-style: none;
-}
 
-.sub_nav .nav_link {
+  .nav_list {
+    display: flex;
+    list-style: none;
 
- display: flex;
- color: black;
- padding: 10px;
- text-decoration: none;
-  
-}
+    .nav_link {
 
-.sub_nav .nav_list li:nth-child(-n+2) a:after {
- content: ' / ';
-  margin-left:20px;
+        display: flex;
+        color: black;
+        padding: 10px;
+        text-decoration: none;
+         
+       }
+      & li:nth-child(-n+2) a:after {
+        content: ' / ';
+         margin-left:20px;
+       }
+   }
 }
+ 
+
+
+
+
