Llego le tiro le mando el estilo

--- a/_Paragraph.scss
+++ b/_Paragraph.scss
@@ -1,4 +1,10 @@
+$titlefont: 'Lobster', cursive;
+$paragraphFont:'Open Sans', sans-serif;
+.main-header{
+  font-family: $titlefont;
+}
 .paragraph{
+  font-family: $paragraphFont;
     display: flex;
   width:500px;
 }
