--- a/Estilos.css
+++ b/Estilos.css
@@ -1,149 +1,49 @@
-.nav .nav_list {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
+.nav .nav_list { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.nav .nav_list .nav_items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
+.nav .nav_list .nav_items { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.nav .nav_list .nav_items .nav_link {
-  color: black;
-  margin: 20px;
-  text-decoration: none;
-}
+.nav .nav_list .nav_items .nav_link { font-family: "Lobster", cursive; color: black; margin: 20px; text-decoration: none; }
 
-.nav .nav_list .nav_items .nav_link:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
+.nav .nav_list .nav_items .nav_link:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
 
-.nav #nav_logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: black;
-}
+.nav #nav_logo { display: -webkit-box; display: -ms-flexbox; display: flex; background: white; }
 
-.nav #nav_logo .nav_logo-modified {
-  color: white;
-  margin: 10px;
-  font-size: 30px;
-  text-decoration: none;
-}
+.nav #nav_logo .nav_logo-modified { color: white; margin: 10px; font-size: 30px; text-decoration: none; }
 
-.sub_nav {
-  margin-top: -17px;
-  background: lightgrey;
-}
+.sub_nav { margin-top: -17px; background: black; }
 
-.sub_nav .nav_list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-}
+.sub_nav .nav_list { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; }
 
-.sub_nav .nav_list .nav_link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: black;
-  padding: 10px;
-  text-decoration: none;
-}
+.sub_nav .nav_list .nav_link { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: "Lobster", cursive; color: white; padding: 10px; text-decoration: none; }
 
-.sub_nav .nav_list li:nth-child(-n+2) a:after {
-  content: ' / ';
-  margin-left: 20px;
-}
+.sub_nav .nav_list li:nth-child(-n+2) a:after { content: ' / '; margin-left: 20px; }
 
-#main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 10px;
-}
+#main { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px; }
 
-.main-article {
-  width: 300px;
-  margin: auto;
-  padding: 10px;
-  border: black 1px solid;
-  margin-top: 10px;
-}
+.main-article { width: 300px; margin: auto; padding: 10px; border: black 1px solid; margin-top: 10px; }
 
-.main-article p {
-  width: 140px;
-}
+.main-article p { width: 140px; }
 
-.main-article b {
-  text-decoration: underline;
-}
+.main-article b { text-decoration: underline; }
 
-.main-article .article-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background: #EDF6FC;
-  width: auto;
-  height: 150px;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
+.main-article .article-section { display: -webkit-box; display: -ms-flexbox; display: flex; background: #EDF6FC; /* width:auto; height:150px;*/ margin: auto; text-align: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: "Open Sans", sans-serif; }
 
-.main-article .article-section .section-paragraph {
-  -webkit-transform: translate(70px);
-          transform: translate(70px);
-  font-size: 20px;
-}
+.main-article .article-section .section-paragraph { -webkit-transform: translate(70px); transform: translate(70px); font-size: 20px; }
 
-.main-article .article-section2 p:last-child {
-  color: green;
-}
+.main-article .article-section2 { font-family: "Open Sans", sans-serif; font-size: 14px; }
 
-@media only screen and (max-width: 700px) {
-  body {
-    margin-top: 70px;
-  }
-  body #nav_logo {
-    position: absolute;
-    top: 7px;
-    left: 45%;
-  }
-  body .nav {
-    background: black;
-  }
-  body .nav .nav_list .nav_items .nav_link {
-    color: white;
-    margin-left: -3%;
-  }
-  body .main-article {
-    width: 65%;
-  }
-}
+.main-article .article-section2 .sec-header { font-family: "Lobster", cursive; font-size: 18px; }
 
-.paragraph {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 500px;
-}
+.main-article .article-section2 p:last-child { color: green; }
 
-@media only screen and (max-width: 530px) {
-  .paragraph {
-    width: auto;
-  }
-}
-/*# sourceMappingURL=Estilos.css.map */
+@media only screen and (max-width: 700px) { body { margin-top: 70px; }
+  body #nav_logo { position: absolute; top: 7px; left: 45%; }
+  body .nav { background: #F29F05; }
+  body .nav .nav_list .nav_items .nav_link { color: black; margin-left: -3%; }
+  body .main-article { width: 65%; } }
+
+.main-header { font-family: "Lobster", cursive; }
+
+.paragraph { font-family: "Open Sans", sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; width: 500px; }
+
+@media only screen and (max-width: 530px) { .paragraph { width: auto; } }
