--- a/_Header.scss
+++ b/_Header.scss
@@ -1,4 +1,9 @@
+$logobackground: white;
+$subnavBackgorund: black;
+$titlefont: 'Lobster', cursive;
+$paragraphFont:'Open Sans', sans-serif;
 .nav {
+  
 	 & .nav_list{
         list-style:none;
       display:flex;
@@ -8,6 +13,7 @@
             display:flex;
           
             & .nav_link {
+              font-family: $titlefont;
                 color:black;
                 margin:20px;
                 text-decoration:none;
@@ -20,7 +26,7 @@
     }
     & #nav_logo {
         display:flex;
-        background:black;
+        background:$logobackground;
      
         & .nav_logo-modified{
          color:white;
@@ -35,7 +41,7 @@
 
 .sub_nav {
   margin-top:-17px;
-  background:lightgrey;
+  background:$subnavBackgorund;
 
   .nav_list {
     display: flex;
@@ -44,7 +50,8 @@
     .nav_link {
 
         display: flex;
-        color: black;
+        font-family: $titlefont;
+        color: white;
         padding: 10px;
         text-decoration: none;
          
