--- a/_Main.scss
+++ b/_Main.scss
@@ -1,3 +1,6 @@
+$navlinkbackground: #F29F05;
+$titlefont: 'Lobster', cursive;
+$paragraphFont:'Open Sans', sans-serif;
 #main{ 
  
     display:flex;
@@ -21,11 +24,14 @@
     .article-section{
         display:flex;
         background:#EDF6FC;
-        width:auto;
-        height:150px;
+       /* width:auto;
+       height:150px;*/
+       margin: auto;
       text-align:center;
         align-items:center;
+        font-family: $paragraphFont;
         & .section-paragraph{
+          
             transform:translate(70px);
            font-size:20px;
 
@@ -33,7 +39,14 @@
       }
 
     .article-section2{
+      font-family: $paragraphFont;
+      font-size: 14px;
+      .sec-header{
+        font-family: $titlefont;
+        font-size: 18px;
+      }
         p:last-child{
+         
             color:green;
         }
 
@@ -56,11 +69,11 @@
          }
 
          .nav {
-            background:black;
+            background:$navlinkbackground;
             & .nav_list{
                 & .nav_items{
                     & .nav_link{
-                        color:white;
+                        color:black;
                         margin-left:-3%;
 
                     }
