--- a/_Paragraph.scss
+++ b/_Paragraph.scss
@@ -1,6 +1,6 @@
 $titlefont: 'Lobster', cursive;
 $paragraphFont:'Open Sans', sans-serif;
-.main-header{
+.main__header{
   font-family: $titlefont;
 }
 .paragraph{
