--- a/Estilos.css
+++ b/Estilos.css
@@ -1,46 +1,46 @@
-.nav .nav_list { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.nav .nav__list { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.nav .nav_list .nav_items { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.nav .nav__list .nav__items { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.nav .nav_list .nav_items .nav_link { font-family: "Lobster", cursive; color: black; margin: 20px; text-decoration: none; }
+.nav .nav__list .nav__items .nav__link { font-family: "Lobster", cursive; color: black; margin: 20px; text-decoration: none; }
 
-.nav .nav_list .nav_items .nav_link:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
+.nav .nav__list .nav__items .nav__link:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
 
-.nav #nav_logo { display: -webkit-box; display: -ms-flexbox; display: flex; background: white; }
+.nav #nav__logo { display: -webkit-box; display: -ms-flexbox; display: flex; background: white; }
 
-.nav #nav_logo .nav_logo-modified { color: white; margin: 10px; font-size: 30px; text-decoration: none; }
+.nav #nav__logo .nav__logo__modified { color: white; margin: 10px; font-size: 30px; text-decoration: none; }
 
-.sub_nav { margin-top: -17px; background: black; }
+.sub__nav { margin-top: -17px; background: black; }
 
-.sub_nav .nav_list { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; }
+.sub__nav .nav__list { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; }
 
-.sub_nav .nav_list .nav_link { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: "Lobster", cursive; color: white; padding: 10px; text-decoration: none; }
+.sub__nav .nav__list .nav__link { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: "Lobster", cursive; color: white; padding: 10px; text-decoration: none; }
 
-.sub_nav .nav_list li:nth-child(-n+2) a:after { content: ' / '; margin-left: 20px; }
+.sub__nav .nav__list li:nth-child(-n+2) a:after { content: ' / '; margin-left: 20px; }
 
-#movie-list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px; }
+#movie__list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px; }
 
-.movie-item { width: 300px; margin: auto; padding: 10px; border: black 1px solid; margin-top: 10px; }
+.movie__item { width: 300px; margin: auto; padding: 10px; border: black 1px solid; margin-top: 10px; }
 
-.movie-item p { width: 140px; }
+.movie__item p { width: 140px; }
 
-.movie-item b { text-decoration: underline; }
+.movie__item b { text-decoration: underline; }
 
-.movie-item .movie-banner { display: -webkit-box; display: -ms-flexbox; display: flex; background: #EDF6FC; /* width:auto; height:150px;*/ margin: auto; text-align: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: "Open Sans", sans-serif; }
+.movie__item .movie__banner { display: -webkit-box; display: -ms-flexbox; display: flex; background: #EDF6FC; /* width:auto; height:150px;*/ margin: auto; text-align: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; font-family: "Open Sans", sans-serif; }
 
-.movie-item .movie-description { font-family: "Open Sans", sans-serif; font-size: 14px; }
+.movie__item .movie__description { font-family: "Open Sans", sans-serif; font-size: 14px; }
 
-.movie-item .movie-description .movie-title { font-family: "Lobster", cursive; font-size: 18px; }
+.movie__item .movie__description .movie__title { font-family: "Lobster", cursive; font-size: 18px; }
 
-.movie-item .movie-description p:last-child { color: green; }
+.movie__item .movie__description p:last-child { color: green; }
 
 @media only screen and (max-width: 700px) { body { margin-top: 70px; }
-  body #nav_logo { position: absolute; top: 7px; left: 45%; }
+  body #nav__logo { position: absolute; top: 7px; left: 45%; }
   body .nav { background: #F29F05; }
-  body .nav .nav_list .nav_items .nav_link { color: black; margin-left: -3%; }
-  body .movie-item { width: 65%; } }
+  body .nav .nav__list .nav__items .nav__link { color: black; margin-left: -3%; }
+  body .movie__item { width: 65%; } }
 
-.main-header { font-family: "Lobster", cursive; }
+.main__header { font-family: "Lobster", cursive; }
 
 .paragraph { font-family: "Open Sans", sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; width: 500px; }
 
