--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -1,22 +1,22 @@
-.nav .nav__list { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.menu .menu__list { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.nav .nav__list .nav__items { display: -webkit-box; display: -ms-flexbox; display: flex; }
+.menu .menu__list .menu__items { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.nav .nav__list .nav__items .nav__link { font-family: "Lobster", cursive; color: black; margin: 20px; text-decoration: none; }
+.menu .menu__list .menu__items .menu_item_link { font-family: "Lobster", cursive; color: black; margin: 20px; text-decoration: none; }
 
-.nav .nav__list .nav__items .nav__link:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
+.menu .menu__list .menu__items .menu_item_link:hover { -webkit-transform: scale(1.1); transform: scale(1.1); }
 
-.nav #nav__logo { display: -webkit-box; display: -ms-flexbox; display: flex; background: white; }
+.menu #menu__logo { display: -webkit-box; display: -ms-flexbox; display: flex; background: white; }
 
-.nav #nav__logo .nav__logo__modified { color: white; margin: 10px; font-size: 30px; text-decoration: none; }
+.menu #menu__logo .nav__logo__modified { color: white; margin: 10px; font-size: 30px; text-decoration: none; }
 
-.sub__nav { margin-top: -17px; background: black; }
+.submenu { margin-top: -17px; background: black; }
 
-.sub__nav .nav__list { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; }
+.submenu .submenu__list { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; }
 
-.sub__nav .nav__list .nav__link { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: "Lobster", cursive; color: white; padding: 10px; text-decoration: none; }
+.submenu .submenu__list .submenu_item__link { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: "Lobster", cursive; color: white; padding: 10px; text-decoration: none; }
 
-.sub__nav .nav__list li:nth-child(-n+2) a:after { content: ' / '; margin-left: 20px; }
+.submenu .submenu__list li:nth-child(-n+2) a:after { content: ' / '; margin-left: 20px; }
 
 #movie__list { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin: 10px; }
 
@@ -35,13 +35,13 @@
 .movie__item .movie__description p:last-child { color: green; }
 
 @media only screen and (max-width: 700px) { body { margin-top: 70px; }
-  body #nav__logo { position: absolute; top: 7px; left: 45%; }
-  body .nav { background: #F29F05; }
-  body .nav .nav__list .nav__items .nav__link { color: black; margin-left: -3%; }
+  body #menu__logo { position: absolute; top: 7px; left: 45%; }
+  body .menu { background: #F29F05; }
+  body .menu .menu__list .menu__items .menu_item_link { color: black; margin-left: -3%; }
   body .movie__item { width: 65%; } }
 
-.main__header { font-family: "Lobster", cursive; }
+.main__title { font-family: "Lobster", cursive; }
 
-.paragraph { font-family: "Open Sans", sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; width: 500px; }
+.main_title_paragraph { font-family: "Open Sans", sans-serif; display: -webkit-box; display: -ms-flexbox; display: flex; width: 500px; }
 
 @media only screen and (max-width: 530px) { .paragraph { width: auto; } }
